--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "74154f87-5947-46e0-b641-3d707d71ea74"
+        "outputId": "8997985f-ccf9-45dc-ba45-783ff363341c"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f4bec54d-23be-4d2e-a986-85a2e2fa65ef\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4bec54d-23be-4d2e-a986-85a2e2fa65ef')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f4bec54d-23be-4d2e-a986-85a2e2fa65ef button.colab-df-convert');\n",
+              "        document.querySelector('#df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f4bec54d-23be-4d2e-a986-85a2e2fa65ef');\n",
+              "        const element = document.querySelector('#df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-13abdb60-1270-4373-a4ca-e8480806d72b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-13abdb60-1270-4373-a4ca-e8480806d72b')\"\n",
+              "    <div id=\"df-c87904d0-28e0-47ae-b44b-ea6889c877a1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c87904d0-28e0-47ae-b44b-ea6889c877a1')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-13abdb60-1270-4373-a4ca-e8480806d72b button');\n",
+              "            document.querySelector('#df-c87904d0-28e0-47ae-b44b-ea6889c877a1 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 1
         }
       ],
       "source": [
@@ -459,12 +459,12 @@
       ],
       "metadata": {
         "id": "NUKuzTgDTsgx",
-        "outputId": "7de00171-c27f-4f48-de8b-0dc178af033d",
+        "outputId": "1ff6a7b7-913d-450f-c1ff-68db3ba828ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,12 +527,12 @@
       ],
       "metadata": {
         "id": "myb1D9l-UVUw",
-        "outputId": "0c691093-d142-4518-e39c-54bf7322447d",
+        "outputId": "6697cec4-e3b8-4079-893a-848e4584d141",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,12 +584,12 @@
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "ccd3a615-2620-4593-a815-4160dd9a3e52",
+        "outputId": "f14549cf-0ebe-43fe-bc13-14eb4427adc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,13 +667,13 @@
       ],
       "metadata": {
         "id": "KDyr8E71V3m-",
-        "outputId": "08701e05-4bb1-4409-b29a-2ebcea555b2a",
+        "outputId": "d42d6125-1471-40d4-ccd5-0ce2923463b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -715,12 +715,12 @@
       ],
       "metadata": {
         "id": "1MKKXHjvjuA-",
-        "outputId": "07f9990b-9b19-4a91-aa95-fa31bbac3077",
+        "outputId": "c82cf80a-5b84-4913-ff12-cd8dfde42fce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,9 +839,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "ca3b6036-3c99-4fe1-bf1a-72da84678ec6"
+        "outputId": "a2b18aa0-0fb2-4165-8a96-dc99d9057c47"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -898,9 +898,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30f17fc3-55bb-452f-e005-ccc74e9764ae"
+        "outputId": "ac3196cc-77a0-4265-92b3-88679a462539"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -996,13 +996,13 @@
       ],
       "metadata": {
         "id": "I0KkjPoTY88F",
-        "outputId": "26d390c6-f72f-4b7a-bf5b-7a7df6561f74",
+        "outputId": "1c3d93bc-b6c9-48ee-db75-ace5a06276a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1052,12 +1052,12 @@
       ],
       "metadata": {
         "id": "qoyjqijQZHfF",
-        "outputId": "73254260-8717-4059-96ad-b7c5c0cc248e",
+        "outputId": "9c142975-ac3d-406f-ac44-dec0b6243193",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,13 +1235,13 @@
       ],
       "metadata": {
         "id": "FxWrjYlgKOc6",
-        "outputId": "acb290b4-bd20-4776-e0f5-88a11b5e69c3",
+        "outputId": "a7e617d1-5825-414c-dd5c-b68086fe38ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 779
         }
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1302,12 +1302,12 @@
       ],
       "metadata": {
         "id": "S2JeaCykZNy9",
-        "outputId": "4b8732b6-799a-41d5-eb54-e6644ee8fd8b",
+        "outputId": "e961e658-fdac-4e20-c98c-1a4d823b0b9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,13 +1387,13 @@
       ],
       "metadata": {
         "id": "0tSdCie9ZQlt",
-        "outputId": "ae43a371-dc19-453d-a9ee-cc795c07db83",
+        "outputId": "79cab412-f8df-4e45-a599-85a141e61a1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 28,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1450,12 +1450,12 @@
       ],
       "metadata": {
         "id": "DCu3km5NPYcm",
-        "outputId": "2fece6d5-be59-4059-d58a-a407a4eb50b7",
+        "outputId": "0dc909e9-b283-4625-d18f-fd1779c90c05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1560,22 +1560,20 @@
       ],
       "metadata": {
         "id": "v1WAndx9XwtH",
-        "outputId": "b47f2793-d426-4f0c-82e2-a18c8b8284b0",
+        "outputId": "08680988-15f6-4f65-e724-00b6139ffca2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 642
         }
       },
-      "execution_count": 34,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2461265810.py:31: UserWarning:\n",
-            "\n",
-            "set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
-            "\n"
+            "/tmp/ipython-input-1047074329.py:31: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+            "  ax1.set_xticklabels(ciudades, rotation=45, ha=\"right\")\n"
           ]
         },
         {
@@ -1610,7 +1608,7 @@
       "metadata": {
         "id": "48VVAob2RVB7"
       },
-      "execution_count": 36,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1646,12 +1644,12 @@
       ],
       "metadata": {
         "id": "JRhyU177RXNb",
-        "outputId": "e5ba3413-8e6c-4764-c844-215fced6616e",
+        "outputId": "272f4d3d-a918-4c4e-9885-7ba4f6e6e2f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,13 +1745,13 @@
       ],
       "metadata": {
         "id": "Qodq4HvPWHF5",
-        "outputId": "7e22d75a-deca-4e7d-b90e-60f2d2b57815",
+        "outputId": "850aae4d-882d-43e1-f829-b1ea91ec431d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 38,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1802,12 +1800,12 @@
       ],
       "metadata": {
         "id": "4gYzvweLYyeh",
-        "outputId": "2070698a-a37e-444d-b073-bafb4da627ba",
+        "outputId": "46cb3f28-6dea-4281-d30b-b33e6baf4638",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,13 +1856,13 @@
       ],
       "metadata": {
         "id": "iz1lyHqBYhrV",
-        "outputId": "0d85b7d5-272d-41ac-bba1-4c973f73ce7e",
+        "outputId": "0b7c8a16-6016-4bf5-d180-3b7cc9adb897",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 40,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
