--- a/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
+++ b/Copia_de_AluraStoreLatam_Challegue1_Ciencia_de_datos_Edgar_Bernal.ipynb
@@ -44,7 +44,7 @@
           "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "8997985f-ccf9-45dc-ba45-783ff363341c"
+        "outputId": "609a939d-0db2-4ec7-b808-820e27ea5c85"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bb1d5aba-4569-4674-85e1-feba48cb6592\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb1d5aba-4569-4674-85e1-feba48cb6592')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c button.colab-df-convert');\n",
+              "        document.querySelector('#df-bb1d5aba-4569-4674-85e1-feba48cb6592 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9c3f0bd4-59e5-45d4-9e35-9b5c3d72552c');\n",
+              "        const element = document.querySelector('#df-bb1d5aba-4569-4674-85e1-feba48cb6592');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c87904d0-28e0-47ae-b44b-ea6889c877a1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c87904d0-28e0-47ae-b44b-ea6889c877a1')\"\n",
+              "    <div id=\"df-5186e24d-d624-4802-8713-f017e26541e0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5186e24d-d624-4802-8713-f017e26541e0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c87904d0-28e0-47ae-b44b-ea6889c877a1 button');\n",
+              "            document.querySelector('#df-5186e24d-d624-4802-8713-f017e26541e0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -459,7 +459,7 @@
       ],
       "metadata": {
         "id": "NUKuzTgDTsgx",
-        "outputId": "1ff6a7b7-913d-450f-c1ff-68db3ba828ba",
+        "outputId": "f993f670-53bb-410d-a3bf-155caae40f76",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -527,7 +527,7 @@
       ],
       "metadata": {
         "id": "myb1D9l-UVUw",
-        "outputId": "6697cec4-e3b8-4079-893a-848e4584d141",
+        "outputId": "6cee9e8c-2572-4e8f-8450-bf0fa12afef3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -584,7 +584,7 @@
       ],
       "metadata": {
         "id": "xykobSftV64I",
-        "outputId": "f14549cf-0ebe-43fe-bc13-14eb4427adc3",
+        "outputId": "88db7e52-0e39-4958-de57-21df901a8b2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -667,7 +667,7 @@
       ],
       "metadata": {
         "id": "KDyr8E71V3m-",
-        "outputId": "d42d6125-1471-40d4-ccd5-0ce2923463b4",
+        "outputId": "8e677092-5268-4522-e18b-fc7013bd7c2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
@@ -715,7 +715,7 @@
       ],
       "metadata": {
         "id": "1MKKXHjvjuA-",
-        "outputId": "c82cf80a-5b84-4913-ff12-cd8dfde42fce",
+        "outputId": "7c71b9f7-4135-4f51-f939-92d729e1abf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -839,7 +839,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "a2b18aa0-0fb2-4165-8a96-dc99d9057c47"
+        "outputId": "a408b1b9-b4b7-4d19-a863-5464bb3c3e6b"
       },
       "execution_count": 7,
       "outputs": [
@@ -898,7 +898,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac3196cc-77a0-4265-92b3-88679a462539"
+        "outputId": "b04fdc28-145d-49e6-b58a-672af386699a"
       },
       "execution_count": 8,
       "outputs": [
@@ -996,7 +996,7 @@
       ],
       "metadata": {
         "id": "I0KkjPoTY88F",
-        "outputId": "1c3d93bc-b6c9-48ee-db75-ace5a06276a8",
+        "outputId": "dbba1f49-b0b5-4cf3-9a73-3d12bfc2c09c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
@@ -1052,7 +1052,7 @@
       ],
       "metadata": {
         "id": "qoyjqijQZHfF",
-        "outputId": "9c142975-ac3d-406f-ac44-dec0b6243193",
+        "outputId": "c74d7d15-db07-442f-baef-af160377c897",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1235,7 +1235,7 @@
       ],
       "metadata": {
         "id": "FxWrjYlgKOc6",
-        "outputId": "a7e617d1-5825-414c-dd5c-b68086fe38ce",
+        "outputId": "9b790de1-c873-40e7-e099-35387e64496b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 779
@@ -1302,7 +1302,7 @@
       ],
       "metadata": {
         "id": "S2JeaCykZNy9",
-        "outputId": "e961e658-fdac-4e20-c98c-1a4d823b0b9a",
+        "outputId": "77882a6c-6295-4eb3-d5de-84885da73b3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1387,7 +1387,7 @@
       ],
       "metadata": {
         "id": "0tSdCie9ZQlt",
-        "outputId": "79cab412-f8df-4e45-a599-85a141e61a1a",
+        "outputId": "767fdaad-61b8-42bf-f216-0ff63b5cbbc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
@@ -1450,7 +1450,7 @@
       ],
       "metadata": {
         "id": "DCu3km5NPYcm",
-        "outputId": "0dc909e9-b283-4625-d18f-fd1779c90c05",
+        "outputId": "8e0e00ad-297b-4086-c920-1dc6a58ef5d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1560,7 +1560,7 @@
       ],
       "metadata": {
         "id": "v1WAndx9XwtH",
-        "outputId": "08680988-15f6-4f65-e724-00b6139ffca2",
+        "outputId": "5feeeb05-9e49-4ba5-f280-c8ef1cc4b038",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 642
@@ -1644,7 +1644,7 @@
       ],
       "metadata": {
         "id": "JRhyU177RXNb",
-        "outputId": "272f4d3d-a918-4c4e-9885-7ba4f6e6e2f2",
+        "outputId": "e7549341-f885-462e-e696-f9c877b0161f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1745,7 +1745,7 @@
       ],
       "metadata": {
         "id": "Qodq4HvPWHF5",
-        "outputId": "850aae4d-882d-43e1-f829-b1ea91ec431d",
+        "outputId": "f47bf746-3839-4e27-8119-8a7564b56221",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1800,7 +1800,7 @@
       ],
       "metadata": {
         "id": "4gYzvweLYyeh",
-        "outputId": "46cb3f28-6dea-4281-d30b-b33e6baf4638",
+        "outputId": "09b018ec-a591-41c9-ed6d-3d3e3dee0495",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1856,7 +1856,7 @@
       ],
       "metadata": {
         "id": "iz1lyHqBYhrV",
-        "outputId": "0b7c8a16-6016-4bf5-d180-3b7cc9adb897",
+        "outputId": "38f2a6cc-d123-4abf-978c-4eb0a942938e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2089,8 +2089,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Se recomienda al Señor Juan vender la Tienda 4 .\n",
-        "#### La Tienda 4 representa el activo con peor rendimiento financiero de la empresa. Venderla le permitirá al Señor Juan liberar capital de un negocio que no está creciendo (o generando poco ingreso) y reenfocar esos fondos en su nuevo proyecto, maximizando así su estrategia de inversión."
+        "### Decisión Estratégica: Vender la Tienda 4.\n",
+        "#### La recomendación es vender la Tienda 4 para liberar capital e invertirlo en el nuevo negocio.\n",
+        "\n",
+        "*   Bajo Rendimiento Financiero: La Tienda 4 registra consistentemente el Ingreso Total más bajo del grupo. En un negocio, la generación de capital es el factor decisivo.\n",
+        "*   Bajo Impacto Logístico: Aunque la Tienda 4 tiene el Costo de Envío Promedio más bajo , su eficiencia logística no se traduce en ingresos. El bajo volumen de ventas no justifica mantener la operación.\n",
+        "\n",
+        "*   Riesgo Manejable: Aunque la Tienda 1 tiene la calificación más baja, la diferencia es mínima entre todas las tiendas. Por lo tanto, el riesgo de servicio es bajo, mientras que el riesgo de baja rentabilidad de la Tienda 4 es alto.\n",
+        "### Conclusión para la Inversión\n",
+        "#### Vender la Tienda 4 permite al Señor Juan deshacerse del negocio con la peor capacidad de generar ganancias , reciclar ese capital y maximizar el potencial de retorno en su nueva inversión.\n"
       ],
       "metadata": {
         "id": "wsPv2sAXgM0h"
